Closed Bug 1728891 Opened 3 years ago Closed 3 years ago

Window chrome occasionally gets stuck

Categories

(Core :: Graphics, defect, P2)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: rmader, Assigned: rmader)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Under yet unknown circumstances windows sometimes can get stuck. Alt-tabbing out and back makes us render another frame, but doesn't unblock things. So far this was observed in multi-window cases.

Will dig into it.

To make it easier to understand. No functional changes intended.

This makes sure we handle a case when the wl_surface gets deleted
and recreated without restart of the VsyncSource.

As side-effect we should draw one frame earlier in some cases.

Note: due to missing STR for the original issue this was tested
by re-enabling the WaylandVsyncSource for popups. This patch
makes this case moch more usable, but I'm not yet sure if all
(racy) issues are solved.

Depends on D124571

Attachment #9239527 - Attachment description: WIP: Bug 1728891 - Move container initial draw callback to SetupFrameCallback(), stransky → Bug 1728891 - Move container initial draw callback to SetupFrameCallback(), r=stransky

Ok, I think I was on a totally wrong track here. I'm writing this from such a "stuck" window right now and, assuming I'm seeing the same what others have reported, not all rendering is stuck, but only that of the browser chrome / the main process. I.e. it affects tab switching and scrolling about:support/about:config, but not website content. Scrolling or writing a text there works just fine (and vsynced).

That strongly indicates not a problem in WaylandVsyncSource (we only have one for each window) but rather in WR or some other graphics related part. Another observation is that the next update happens on tab-out, not tab-in.

Jonas, can you confirm that what you experienced was the same?

Flags: needinfo?(jadahl)
Keywords: leave-open
Pushed by robert.mader@posteo.de: https://hg.mozilla.org/integration/autoland/rev/0ed4219472fd Some cleanups for WaylandVsyncSource, r=stransky

Jonas, can you confirm that what you experienced was the same?

Yes, only the chrome is stuck and inoperable. I can still scroll and interact with the web page itself.

Flags: needinfo?(jadahl)
Summary: Wayland vsync source occasionally gets stuck → Window chrome occasionally gets stuck

(In reply to Jonas Ådahl from comment #5)

Jonas, can you confirm that what you experienced was the same?

Yes, only the chrome is stuck and inoperable. I can still scroll and interact with the web page itself.

Martin, needinfoing you just so you are aware of the issue - maybe you have an idea what could be causing this?

Flags: needinfo?(stransky)
See Also: → 1729723

Jonas, can you try to get profile data and check about:performance page?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Firefox_performance_issues
Especially the profile may reveal a lag in main process.
Thanks.

Flags: needinfo?(stransky) → needinfo?(jadahl)

(In reply to Martin Stránský [:stransky] (ni? me) from comment #8)

Jonas, can you try to get profile data and check about:performance page?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Firefox_performance_issues
Especially the profile may reveal a lag in main process.
Thanks.

I ran into this again, and about:performance didn't report anything as consuming abnormal. The most tab eating most resources was a youtube page playing in a non-stuck window.

Didn't manage to record anything yet, as the issue suddenly stopped itself as I was trying to prepare to start recording.

I haven't seen this for quite a while. Jonas, did you run into this lately?

The leave-open keyword is there and there is no activity for 6 months.
:bhood, maybe it's time to close this bug?
For more information, please visit auto_nag documentation.

Flags: needinfo?(bhood)

Robert, should we continue to hold this report open?

Flags: needinfo?(bhood) → needinfo?(robert.mader)

Sorry, had missed the question. I haven't seen this for quite some time too.

Flags: needinfo?(jadahl)

Sorry, had missed the question. I haven't seen this for quite some time too.

Me neither, thanks for confirming!

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Flags: needinfo?(robert.mader)
Resolution: --- → WORKSFORME
Resolution: WORKSFORME → FIXED
Attachment #9239527 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: