Bug 1728891 - Some cleanups for WaylandVsyncSource, r=stransky

To make it easier to understand. No functional changes intended.

Differential Revision: https://phabricator.services.mozilla.com/D124571